Fix menu dropdown; Fix z-index header;

--- a/assets/structure.css
+++ b/assets/structure.css
@@ -47,19 +47,10 @@
     width: 40%;
 }
 
-/* .social_icons {
-    margin: 75px 0;
-} */
-
 .social_icons h2 {
     margin: 30px 0 ;
 }
 
-/* .social_i {
-    width: 80px;
-    height: 80px;
-    margin: 10px;
-} */
 /* /MAIN */
 
 /* FOOTER */
